// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Project Flow Project Information Capture and Select Template screens should go to Select Report Template if Project Name is filled : Select Report Template Screen 1`] = `
<div>
  <div>
    <div>
      <div
        class="header"
      >
        <div
          style="display: flex;"
        >
          <div
            class="reportNavBtn"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium navIcon css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIosIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
              />
            </svg>
            <div>
              Project Details
            </div>
          </div>
        </div>
        <div
          class="menuIconsGroup"
        />
        <img
          alt="AI Verify"
          class="logo"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
        <div
          style="display: flex;"
        >
          <div
            class="root"
          >
            <div
              class="icon"
            >
              <button
                class="iconBtn iconBtn__noOutline aiv_iconbtn"
              >
                <div
                  class="btnContent"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="NotificationsNoneIcon"
                    focusable="false"
                    style="font-size: 25px; color: rgb(120, 120, 120);"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
                    />
                  </svg>
                  <div />
                </div>
              </button>
            </div>
            <div
              class="flyOutMsg"
            />
          </div>
          <div
            class="reportNavBtn disableNavBtn"
            style="margin-left: 20px;"
          >
            <div>
              Next
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium navIcon css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowForwardIosIcon"
              focusable="false"
              style="margin-left: 5px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="layoutContentArea"
    >
      <div
        class="scrollContainer"
      >
        <div
          class="mainContainer"
        >
          <div
            class="container__limits"
          >
            <div
              class="layout"
            >
              <div
                style="margin-bottom: 25px;"
              >
                <div
                  style="display: flex;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="MenuBookIcon"
                    focusable="false"
                    style="font-size: 30px; margin-right: 15px; margin-top: 2px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M21 5c-1.11-.35-2.33-.5-3.5-.5-1.95 0-4.05.4-5.5 1.5-1.45-1.1-3.55-1.5-5.5-1.5S2.45 4.9 1 6v14.65c0 .25.25.5.5.5.1 0 .15-.05.25-.05C3.1 20.45 5.05 20 6.5 20c1.95 0 4.05.4 5.5 1.5 1.35-.85 3.8-1.5 5.5-1.5 1.65 0 3.35.3 4.75 1.05.1.05.15.05.25.05.25 0 .5-.25.5-.5V6c-.6-.45-1.25-.75-2-1zm0 13.5c-1.1-.35-2.3-.5-3.5-.5-1.7 0-4.15.65-5.5 1.5V8c1.35-.85 3.8-1.5 5.5-1.5 1.2 0 2.4.15 3.5.5v11.5z"
                    />
                    <path
                      d="M17.5 10.5c.88 0 1.73.09 2.5.26V9.24c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99zM13 12.49v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26V11.9c-.79-.15-1.64-.24-2.5-.24-1.7 0-3.24.3-4.5.83zm4.5 1.84c-1.7 0-3.24.29-4.5.83v1.66c1.13-.64 2.7-.99 4.5-.99.88 0 1.73.09 2.5.26v-1.52c-.79-.16-1.64-.24-2.5-.24z"
                    />
                  </svg>
                  <div>
                    <h3
                      class="screenHeading"
                    >
                      Select Report Template
                    </h3>
                    <p
                      class="headingDescription"
                    >
                      Select a template or start with an empty canvas.
                    </p>
                  </div>
                </div>
                <div
                  style="color: rgb(196, 41, 131); display: flex; margin-top: 15px; font-size: 14px;"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="InfoOutlinedIcon"
                    focusable="false"
                    style="margin-right: 5px;"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
                    />
                  </svg>
                  <span>
                    No Templates Found. Select 'Blank Canvas' and click 'Next'
                  </span>
                </div>
              </div>
              <div
                class="templatesList"
              >
                <div
                  class="blankCanvasCard"
                >
                  <div
                    class="blankCardmainContent"
                  >
                    <div
                      class="blankCardHeading"
                    >
                      Blank Canvas
                    </div>
                    <div
                      class="blankCardDescription"
                    >
                      Design your own report by dragging widgets onto a blank canvas
                    </div>
                  </div>
                  <div
                    class="verticalDivider"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Flow Project Information Capture and Select Template screens should render Project Information Capture screen: Project Information Capture Screen 1`] = `
<div>
  <div>
    <div>
      <div
        class="header"
      >
        <div
          style="display: flex;"
        >
          <div
            class="reportNavBtn"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium navIcon css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowBackIosIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M11.67 3.87 9.9 2.1 0 12l9.9 9.9 1.77-1.77L3.54 12z"
              />
            </svg>
            <div>
              Home
            </div>
          </div>
        </div>
        <div
          class="menuIconsGroup"
        />
        <img
          alt="AI Verify"
          class="logo"
          data-nimg="1"
          decoding="async"
          height="40"
          loading="lazy"
          src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
          srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
          style="color: transparent;"
          width="40"
        />
        <div
          style="display: flex;"
        >
          <div
            class="root"
          >
            <div
              class="icon"
            >
              <button
                class="iconBtn iconBtn__noOutline aiv_iconbtn"
              >
                <div
                  class="btnContent"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="NotificationsNoneIcon"
                    focusable="false"
                    style="font-size: 25px; color: rgb(120, 120, 120);"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 22c1.1 0 2-.9 2-2h-4c0 1.1.9 2 2 2zm6-6v-5c0-3.07-1.63-5.64-4.5-6.32V4c0-.83-.67-1.5-1.5-1.5s-1.5.67-1.5 1.5v.68C7.64 5.36 6 7.92 6 11v5l-2 2v1h16v-1l-2-2zm-2 1H8v-6c0-2.48 1.51-4.5 4-4.5s4 2.02 4 4.5v6z"
                    />
                  </svg>
                  <div />
                </div>
              </button>
            </div>
            <div
              class="flyOutMsg"
            />
          </div>
          <div
            class="reportNavBtn disableNavBtn"
            style="margin-left: 20px;"
          >
            <div>
              Next
            </div>
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium navIcon css-i4bv87-MuiSvgIcon-root"
              data-testid="ArrowForwardIosIcon"
              focusable="false"
              style="margin-left: 5px;"
              viewBox="0 0 24 24"
            >
              <path
                d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="layoutContentArea"
    >
      <div
        class="scrollContainer"
      >
        <div
          class="mainContainer"
        >
          <div
            class="container__limits"
          >
            <div
              class="layout"
            >
              <div
                style="margin-bottom: 25px;"
              >
                <h3
                  class="screenHeading"
                >
                  Create a new AI Testing Project
                </h3>
                <p
                  class="headingDescription"
                >
                  Create a new AI Testing Project to design the tests to be run on the AI Model 
                  <br />
                  and document the test results in the report generated
                </p>
              </div>
              <div
                class="projectInfoForm"
              >
                <div
                  class="leftSection"
                >
                  <h4>
                    General Information
                  </h4>
                  <p>
                    Provide general information required for the report generation
                  </p>
                </div>
                <div
                  class="vDivider"
                />
                <div
                  class="rightSection"
                >
                  <div
                    class="textInput"
                  >
                    <label>
                      <div
                        class="label"
                      >
                        <div>
                          Project Name *
                        </div>
                      </div>
                      <input
                        maxlength="128"
                        name="name"
                        placeholder="Enter name of this project e.g. Credit Scoring Model Tests"
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <div
                    class="textInput"
                  >
                    <label>
                      <div
                        class="label"
                      >
                        <div>
                          Project Description
                        </div>
                      </div>
                      <textarea
                        maxlength="256"
                        name="description"
                        placeholder="Enter Project Description e.g. To test whether the classification model is fair towards all groups with respect to gender, robust against unexpected input and explainable."
                      />
                    </label>
                  </div>
                  <div
                    class="textInput"
                  >
                    <label>
                      <div
                        class="label"
                      >
                        <div>
                          Report Title
                        </div>
                        <div
                          style="display: flex; align-items: center;"
                        >
                          <input
                            style="width: 15px; height: 15px; margin-right: 5px;"
                            type="checkbox"
                          />
                          <div
                            style="font-weight: normal; font-size: 13px;"
                          >
                            Use Project Name
                          </div>
                        </div>
                      </div>
                      <input
                        maxlength="128"
                        name="reportTitle"
                        placeholder="Enter the title to be used for the generated report"
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <div
                    class="textInput"
                  >
                    <label>
                      <div
                        class="label"
                      >
                        <div>
                          Company Name
                        </div>
                      </div>
                      <input
                        maxlength="128"
                        name="company"
                        placeholder="Enter the company name"
                        type="text"
                        value=""
                      />
                    </label>
                  </div>
                  <div
                    class="formFooter"
                  >
                    * Required
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Flow Report Designer Screen should place widget on canvas, highlight the widget and display widget name and delete button: widget-on-canvas 1`] = `
<div
  class="widgetContainer"
>
  <div
    style="width: 100%;"
  >
    <p>
      <b>
        Results
      </b>
    </p>
    <p>
      The difference between 
      <b>
        <i>
          gender:0,age:21
        </i>
      </b>
       (group with highest value) and 
      <b>
        <i>
          gender:0,age:18
        </i>
      </b>
       (group with lowest value) is 
      <b>
        2607.2669363473
      </b>
       for 
      <i>
        Mean Absolute Error Parity
      </i>
      . In an ideal situation, the parity should be close to 
      0
      .
    </p>
  </div>
</div>
`;

exports[`Project Flow Report Designer Screen should place widget on canvas, highlight the widget and display widget name and delete button: widget-properties-panel 1`] = `
<div
  class="propertiesPanel"
  id="aivWidgetPropertiesPanel"
>
  <div
    class="propertiesHeading"
  >
    <div
      class="headingContainer"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="WidgetsIcon"
        focusable="false"
        style="font-size: 18px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M13 13v8h8v-8h-8zM3 21h8v-8H3v8zM3 3v8h8V3H3zm13.66-1.31L11 7.34 16.66 13l5.66-5.66-5.66-5.65z"
        />
      </svg>
      <span
        style="margin-left: 10px;"
      >
        Widget Properties
      </span>
    </div>
  </div>
  <div
    class="propertiesContent"
  >
    <div
      style="display: flex; flex-direction: column; width: 100%;"
    >
      <div
        class="propertyName"
      >
        Layout / Dimension
      </div>
      <div
        class="dimension"
      >
        <div
          class="dimensionCol"
        >
          <div>
            x: 
            1
          </div>
          <div>
            y: 
            1
          </div>
        </div>
        <div
          class="dimensionCol"
        >
          <div>
            W: 
            6
          </div>
          <div>
            H: 
            3
          </div>
        </div>
        <div
          class="dimensionCol"
        >
          <div>
            minW: 
            6
          </div>
          <div>
            minH: 
            3
          </div>
        </div>
        <div
          class="dimensionCol"
        >
          <div>
            maxW: 
            12
          </div>
          <div>
            maxH: 
            36
          </div>
        </div>
      </div>
      <div
        class="propertyName"
      >
        Alignment
      </div>
      <div
        style="margin-bottom: 15px; display: flex; justify-content: space-between; width: 100%;"
      >
        <div>
          <button
            class="iconBtn aiv_iconbtn"
            style="margin-right: 5px;"
          >
            <div
              class="btnContent"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FormatAlignLeftIcon"
                focusable="false"
                style="font-size: 20px; color: rgb(120, 120, 120);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M15 15H3v2h12v-2zm0-8H3v2h12V7zM3 13h18v-2H3v2zm0 8h18v-2H3v2zM3 3v2h18V3H3z"
                />
              </svg>
              <div />
            </div>
          </button>
          <button
            class="iconBtn aiv_iconbtn"
            style="margin-right: 5px;"
          >
            <div
              class="btnContent"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FormatAlignCenterIcon"
                focusable="false"
                style="font-size: 20px; color: rgb(120, 120, 120);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7 15v2h10v-2H7zm-4 6h18v-2H3v2zm0-8h18v-2H3v2zm4-6v2h10V7H7zM3 3v2h18V3H3z"
                />
              </svg>
              <div />
            </div>
          </button>
          <button
            class="iconBtn aiv_iconbtn"
          >
            <div
              class="btnContent"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="FormatAlignRightIcon"
                focusable="false"
                style="font-size: 20px; color: rgb(120, 120, 120);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M3 21h18v-2H3v2zm6-4h12v-2H9v2zm-6-4h18v-2H3v2zm6-4h12V7H9v2zM3 3v2h18V3H3z"
                />
              </svg>
              <div />
            </div>
          </button>
        </div>
        <div>
          <button
            class="iconBtn aiv_iconbtn"
            style="margin-right: 5px;"
          >
            <div
              class="btnContent"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="AlignVerticalTopIcon"
                focusable="false"
                style="font-size: 20px; color: rgb(120, 120, 120);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22 2v2H2V2h20zM7 22h3V6H7v16zm7-6h3V6h-3v10z"
                />
              </svg>
              <div />
            </div>
          </button>
          <button
            class="iconBtn aiv_iconbtn"
            style="margin-right: 5px;"
          >
            <div
              class="btnContent"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="AlignVerticalCenterIcon"
                focusable="false"
                style="font-size: 20px; color: rgb(120, 120, 120);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22 11h-5V6h-3v5h-4V3H7v8H1.84v2H7v8h3v-8h4v5h3v-5h5z"
                />
              </svg>
              <div />
            </div>
          </button>
          <button
            class="iconBtn aiv_iconbtn"
          >
            <div
              class="btnContent"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="AlignVerticalBottomIcon"
                focusable="false"
                style="font-size: 20px; color: rgb(120, 120, 120);"
                viewBox="0 0 24 24"
              >
                <path
                  d="M22 22H2v-2h20v2zM10 2H7v16h3V2zm7 6h-3v10h3V8z"
                />
              </svg>
              <div />
            </div>
          </button>
        </div>
      </div>
      <div
        class="propertyName"
      >
        Colors
      </div>
      <div
        style="display: flex; width: 100%; position: relative;"
      >
        <div
          style="display: flex; margin-right: 20px; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FormatColorFillIcon"
            focusable="false"
            style="color: rgb(103, 103, 103); font-size: 20px; margin-right: 8px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M16.56 8.94 7.62 0 6.21 1.41l2.38 2.38-5.15 5.15c-.59.59-.59 1.54 0 2.12l5.5 5.5c.29.29.68.44 1.06.44s.77-.15 1.06-.44l5.5-5.5c.59-.58.59-1.53 0-2.12zM5.21 10 10 5.21 14.79 10H5.21zM19 11.5s-2 2.17-2 3.5c0 1.1.9 2 2 2s2-.9 2-2c0-1.33-2-3.5-2-3.5zM2 20h20v4H2v-4z"
            />
          </svg>
          <div
            class="colorBox"
            style="background-color: rgb(255, 255, 255);"
          />
        </div>
        <div
          style="display: flex; align-items: center;"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="FormatColorTextIcon"
            focusable="false"
            style="color: rgb(103, 103, 103); font-size: 20px; margin-right: 8px;"
            viewBox="0 0 24 24"
          >
            <path
              d="M2 20h20v4H2v-4zm3.49-3h2.42l1.27-3.58h5.65L16.09 17h2.42L13.25 3h-2.5L5.49 17zm4.42-5.61 2.03-5.79h.12l2.03 5.79H9.91z"
            />
          </svg>
          <div
            class="colorBox"
            style="background-color: rgb(0, 0, 0);"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Project Flow Report Designer Screen should render Report Designer screen: Report Designer Screen 1`] = `
<div
  class="layoutContentArea"
>
  <div
    class="scrollContainer"
  >
    <div
      class="panelsAndCanvasContainer"
    >
      <div
        class="leftpanel"
        id="leftPanel"
      >
        <div
          class="stickyLeftPanel"
        >
          <div
            style="display: flex; flex-direction: column;"
          >
            <div
              class="panelSection"
            >
              <div>
                <div
                  style="line-height: 1.4; font-size: 18px;"
                >
                  Project
                </div>
                <div
                  class="panelText"
                  style="line-height: 1.2;"
                >
                  Test Project
                </div>
              </div>
            </div>
            <div
              class="sectionDivider"
            />
            <div
              class="panelSectionHeading"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-1n2zeth-MuiSvgIcon-root"
                data-testid="WidgetsIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M13 13v8h8v-8h-8zM3 21h8v-8H3v8zM3 3v8h8V3H3zm13.66-1.31L11 7.34 16.66 13l5.66-5.66-5.66-5.65z"
                />
              </svg>
              <div
                class="panelSectionHeadingText"
              >
                Report Widgets
              </div>
            </div>
            <div
              class="panelSection"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-13s2jsy-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorSecondary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-adornedStart css-v02tyq-MuiInputBase-root-MuiOutlinedInput-root"
                  style="height: 30px;"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-outlined MuiInputAdornment-sizeSmall css-ittuaa-MuiInputAdornment-root"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="SearchIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
                      />
                    </svg>
                  </div>
                  <input
                    aria-invalid="false"
                    class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputSizeSmall MuiInputBase-inputAdornedStart css-1ua80n0-MuiInputBase-input-MuiOutlinedInput-input"
                    id="search-widget-library"
                    placeholder="Search Report Widgets"
                    type="text"
                    value=""
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                  >
                    <legend
                      class="css-ihdtdm"
                    >
                      <span
                        class="notranslate"
                      >
                        ​
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
            <div
              class="widgetScrollContainer"
            >
              <div
                class="widgetsContainer"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="designArea"
        id="designArea"
      >
        <div
          class="designColumn"
          style="margin-top: 24px; margin-bottom: 15px;"
        >
          <h3
            class="screenHeading"
          >
            Design Report
          </h3>
          <p
            class="headingDescription"
          >
            Drag report widgets from the left panel onto the design canvas.
          </p>
        </div>
        <div
          class="designColumn"
        >
          <div
            class="canvas_topbar"
          >
            <div
              style="display: flex; align-items: center;"
            >
              <button
                class="iconBtn iconBtn__noOutline aiv_iconbtn"
              >
                <div
                  class="btnContent"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="GridOnIcon"
                    focusable="false"
                    style="font-size: 20px; color: rgb(120, 120, 120);"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zM8 20H4v-4h4v4zm0-6H4v-4h4v4zm0-6H4V4h4v4zm6 12h-4v-4h4v4zm0-6h-4v-4h4v4zm0-6h-4V4h4v4zm6 12h-4v-4h4v4zm0-6h-4v-4h4v4zm0-6h-4V4h4v4z"
                    />
                  </svg>
                  <div />
                </div>
              </button>
              <button
                class="iconBtn iconBtn__noOutline aiv_iconbtn"
              >
                <div
                  class="btnContent"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="DeleteIcon"
                    focusable="false"
                    style="font-size: 20px; color: rgb(120, 120, 120);"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
                    />
                  </svg>
                  <div />
                </div>
              </button>
              <button
                class="iconBtn iconBtn__noOutline aiv_iconbtn"
              >
                <div
                  class="btnContent"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="AddIcon"
                    focusable="false"
                    style="font-size: 20px; color: rgb(120, 120, 120);"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                    />
                  </svg>
                  <div />
                </div>
              </button>
              <button
                class="iconBtn iconBtn__noOutline aiv_iconbtn"
              >
                <div
                  class="btnContent"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                    data-testid="OpenWithIcon"
                    focusable="false"
                    style="font-size: 20px; color: rgb(120, 120, 120);"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z"
                    />
                  </svg>
                  <div />
                </div>
              </button>
            </div>
            <div
              class="paginationBar"
            >
              <div
                style="padding-right: 5px;"
              >
                Page: 
              </div>
              <nav
                aria-label="pagination navigation"
                class="MuiPagination-root MuiPagination-text css-1oj2twp-MuiPagination-root"
              >
                <ul
                  class="MuiPagination-ul css-wjh20t-MuiPagination-ul"
                >
                  <li>
                    <button
                      aria-label="Go to first page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeSmall MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textSecondary Mui-disabled MuiPaginationItem-firstLast css-hnd4u0-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-tnzq9a-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="FirstPageIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18.41 16.59L13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                        />
                      </svg>
                    </button>
                  </li>
                  <li>
                    <button
                      aria-label="Go to previous page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeSmall MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textSecondary Mui-disabled MuiPaginationItem-previousNext css-hnd4u0-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-tnzq9a-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="NavigateBeforeIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                        />
                      </svg>
                    </button>
                  </li>
                  <li>
                    <button
                      aria-label="Go to next page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeSmall MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textSecondary Mui-disabled MuiPaginationItem-previousNext css-hnd4u0-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-tnzq9a-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="NavigateNextIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                        />
                      </svg>
                    </button>
                  </li>
                  <li>
                    <button
                      aria-label="Go to last page"
                      class="MuiButtonBase-root Mui-disabled MuiPaginationItem-root MuiPaginationItem-sizeSmall MuiPaginationItem-text MuiPaginationItem-circular MuiPaginationItem-textSecondary Mui-disabled MuiPaginationItem-firstLast css-hnd4u0-MuiButtonBase-root-MuiPaginationItem-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiPaginationItem-icon css-tnzq9a-MuiSvgIcon-root-MuiPaginationItem-icon"
                        data-testid="LastPageIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M5.59 7.41L10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                        />
                      </svg>
                    </button>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
        <div
          class="canvas reportRoot reportContainer reportHeight"
        >
          <div
            class="canvas_grid"
          />
          <div
            class="react-grid-layout"
            style="height: 1080px;"
          />
        </div>
      </div>
      <div
        class="rightPanel"
        id="rightPanel"
        style="z-index: 100;"
      >
        <div
          class="stickyPanelContainer"
        >
          <div
            class="propertiesPanel"
            id="aivWidgetPropertiesPanel"
          >
            <div
              class="propertiesHeading"
            >
              <div
                class="headingContainer"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="WidgetsIcon"
                  focusable="false"
                  style="font-size: 18px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M13 13v8h8v-8h-8zM3 21h8v-8H3v8zM3 3v8h8V3H3zm13.66-1.31L11 7.34 16.66 13l5.66-5.66-5.66-5.65z"
                  />
                </svg>
                <span
                  style="margin-left: 10px;"
                >
                  Widget Properties
                </span>
              </div>
            </div>
            <div
              class="propertiesContent"
            >
              <div
                style="display: flex; flex-direction: column; width: 100%;"
              >
                <div
                  class="propertyName"
                >
                  Layout / Dimension
                </div>
                <div
                  class="dimension"
                >
                  <div
                    class="dimensionCol"
                  >
                    <div>
                      x: 
                    </div>
                    <div>
                      y: 
                    </div>
                  </div>
                  <div
                    class="dimensionCol"
                  >
                    <div>
                      W: 
                    </div>
                    <div>
                      H: 
                    </div>
                  </div>
                  <div
                    class="dimensionCol"
                  >
                    <div>
                      minW: 
                    </div>
                    <div>
                      minH: 
                    </div>
                  </div>
                  <div
                    class="dimensionCol"
                  >
                    <div>
                      maxW: 
                    </div>
                    <div>
                      maxH: 
                    </div>
                  </div>
                </div>
                <div
                  class="propertyName"
                >
                  Alignment
                </div>
                <div
                  style="margin-bottom: 15px; display: flex; justify-content: space-between; width: 100%;"
                >
                  <div>
                    <button
                      class="iconBtn aiv_iconbtn"
                      style="margin-right: 5px;"
                    >
                      <div
                        class="btnContent"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatAlignLeftIcon"
                          focusable="false"
                          style="font-size: 20px; color: rgb(120, 120, 120);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M15 15H3v2h12v-2zm0-8H3v2h12V7zM3 13h18v-2H3v2zm0 8h18v-2H3v2zM3 3v2h18V3H3z"
                          />
                        </svg>
                        <div />
                      </div>
                    </button>
                    <button
                      class="iconBtn aiv_iconbtn"
                      style="margin-right: 5px;"
                    >
                      <div
                        class="btnContent"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatAlignCenterIcon"
                          focusable="false"
                          style="font-size: 20px; color: rgb(120, 120, 120);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M7 15v2h10v-2H7zm-4 6h18v-2H3v2zm0-8h18v-2H3v2zm4-6v2h10V7H7zM3 3v2h18V3H3z"
                          />
                        </svg>
                        <div />
                      </div>
                    </button>
                    <button
                      class="iconBtn aiv_iconbtn"
                    >
                      <div
                        class="btnContent"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="FormatAlignRightIcon"
                          focusable="false"
                          style="font-size: 20px; color: rgb(120, 120, 120);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M3 21h18v-2H3v2zm6-4h12v-2H9v2zm-6-4h18v-2H3v2zm6-4h12V7H9v2zM3 3v2h18V3H3z"
                          />
                        </svg>
                        <div />
                      </div>
                    </button>
                  </div>
                  <div>
                    <button
                      class="iconBtn aiv_iconbtn"
                      style="margin-right: 5px;"
                    >
                      <div
                        class="btnContent"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="AlignVerticalTopIcon"
                          focusable="false"
                          style="font-size: 20px; color: rgb(120, 120, 120);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22 2v2H2V2h20zM7 22h3V6H7v16zm7-6h3V6h-3v10z"
                          />
                        </svg>
                        <div />
                      </div>
                    </button>
                    <button
                      class="iconBtn aiv_iconbtn"
                      style="margin-right: 5px;"
                    >
                      <div
                        class="btnContent"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="AlignVerticalCenterIcon"
                          focusable="false"
                          style="font-size: 20px; color: rgb(120, 120, 120);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22 11h-5V6h-3v5h-4V3H7v8H1.84v2H7v8h3v-8h4v5h3v-5h5z"
                          />
                        </svg>
                        <div />
                      </div>
                    </button>
                    <button
                      class="iconBtn aiv_iconbtn"
                    >
                      <div
                        class="btnContent"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                          data-testid="AlignVerticalBottomIcon"
                          focusable="false"
                          style="font-size: 20px; color: rgb(120, 120, 120);"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M22 22H2v-2h20v2zM10 2H7v16h3V2zm7 6h-3v10h3V8z"
                          />
                        </svg>
                        <div />
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="propertyName"
                >
                  Colors
                </div>
                <div
                  style="display: flex; width: 100%; position: relative;"
                >
                  <div
                    style="display: flex; margin-right: 20px; align-items: center;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="FormatColorFillIcon"
                      focusable="false"
                      style="color: rgb(103, 103, 103); font-size: 20px; margin-right: 8px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.56 8.94 7.62 0 6.21 1.41l2.38 2.38-5.15 5.15c-.59.59-.59 1.54 0 2.12l5.5 5.5c.29.29.68.44 1.06.44s.77-.15 1.06-.44l5.5-5.5c.59-.58.59-1.53 0-2.12zM5.21 10 10 5.21 14.79 10H5.21zM19 11.5s-2 2.17-2 3.5c0 1.1.9 2 2 2s2-.9 2-2c0-1.33-2-3.5-2-3.5zM2 20h20v4H2v-4z"
                      />
                    </svg>
                    <div
                      class="colorBox"
                      style="background-color: rgb(255, 255, 255);"
                    />
                  </div>
                  <div
                    style="display: flex; align-items: center;"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                      data-testid="FormatColorTextIcon"
                      focusable="false"
                      style="color: rgb(103, 103, 103); font-size: 20px; margin-right: 8px;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M2 20h20v4H2v-4zm3.49-3h2.42l1.27-3.58h5.65L16.09 17h2.42L13.25 3h-2.5L5.49 17zm4.42-5.61 2.03-5.79h.12l2.03 5.79H9.91z"
                      />
                    </svg>
                    <div
                      class="colorBox"
                      style="background-color: rgb(0, 0, 0);"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="stickyRightAccordionContainer"
          >
            <div
              class="propertiesAccordion"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded css-1wc0u5o-MuiPaper-root-MuiAccordion-root"
                id="globalVars"
              >
                <div
                  aria-expanded="false"
                  class="MuiButtonBase-root MuiAccordionSummary-root css-k8fp39-MuiButtonBase-root-MuiAccordionSummary-root"
                  expandiconstyles="[object Object]"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                  >
                    <div
                      class="headingContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                        data-testid="SettingsIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"
                        />
                      </svg>
                      <div
                        class="accordionHeading"
                      >
                        Global Variables
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expandIcon css-i4bv87-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      style="color: rgb(112, 47, 138);"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                        >
                          <div
                            class="gVarsContainer"
                          >
                            <div
                              class="gVarsRow gVarsRow_padRight"
                            >
                              <div
                                class="gVarsHeading"
                              >
                                Name
                              </div>
                              <div
                                class="gVarsHeading"
                              >
                                Value
                              </div>
                              <div
                                class="gVarsDelCol"
                              />
                            </div>
                            <div
                              class="gVarsScrollContainer"
                            />
                            <div
                              class="gVarsInputRow gVarsRow_padRight"
                            >
                              <div
                                class="gVarsInputCol"
                              >
                                <input
                                  type="text"
                                  value=""
                                />
                              </div>
                              <div
                                class="gVarsInputCol"
                              >
                                <input
                                  type="text"
                                  value=""
                                />
                              </div>
                              <button
                                class="gVarsAddBtn"
                                disabled=""
                              >
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                                  data-testid="AddIcon"
                                  focusable="false"
                                  style="color: rgb(103, 103, 103);"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                                  />
                                </svg>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-disabled css-1wc0u5o-MuiPaper-root-MuiAccordion-root"
                id="testToRun"
              >
                <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="MuiButtonBase-root Mui-disabled MuiAccordionSummary-root Mui-disabled css-k8fp39-MuiButtonBase-root-MuiAccordionSummary-root"
                  expandiconstyles="[object Object]"
                  role="button"
                  tabindex="-1"
                >
                  <div
                    class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                  >
                    <div
                      class="headingContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                        data-testid="DirectionsRunIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M13.49 5.48c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm-3.6 13.9 1-4.4 2.1 2v6h2v-7.5l-2.1-2 .6-3c1.3 1.5 3.3 2.5 5.5 2.5v-2c-1.9 0-3.5-1-4.3-2.4l-1-1.6c-.4-.6-1-1-1.7-1-.3 0-.5.1-.8.1l-5.2 2.2v4.7h2v-3.4l1.8-.7-1.6 8.1-4.9-1-.4 2 7 1.4z"
                        />
                      </svg>
                      <div
                        class="accordionHeadingWrapper"
                      >
                        <div
                          class="accordionHeading"
                        >
                          Tests to Run
                        </div>
                        <div
                          class="indicatorsGroup"
                        >
                          <div
                            class="testsCountChip"
                          >
                            0
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expandIcon css-i4bv87-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      style="color: rgb(112, 47, 138);"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                        >
                          <div
                            class="depedencyDetailsScrollContainer"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded Mui-disabled css-1wc0u5o-MuiPaper-root-MuiAccordion-root"
                id="inputBlocks"
              >
                <div
                  aria-disabled="true"
                  aria-expanded="false"
                  class="MuiButtonBase-root Mui-disabled MuiAccordionSummary-root Mui-disabled css-k8fp39-MuiButtonBase-root-MuiAccordionSummary-root"
                  expandiconstyles="[object Object]"
                  role="button"
                  tabindex="-1"
                >
                  <div
                    class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                  >
                    <div
                      class="headingContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeSmall css-1bptiuh-MuiSvgIcon-root"
                        data-testid="DynamicFormIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M17 20v-9h-2V4h7l-2 5h2l-5 11zm-2-7v7H4c-1.1 0-2-.9-2-2v-3c0-1.1.9-2 2-2h11zm-8.75 2.75h-1.5v1.5h1.5v-1.5zM13 4v7H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2h9zM6.25 6.75h-1.5v1.5h1.5v-1.5z"
                        />
                      </svg>
                      <div
                        class="accordionHeadingWrapper"
                      >
                        <div
                          class="accordionHeading"
                        >
                          Input Blocks
                        </div>
                        <div
                          class="testsCountChip"
                        >
                          0
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium expandIcon css-i4bv87-MuiSvgIcon-root"
                      data-testid="ExpandMoreIcon"
                      focusable="false"
                      style="color: rgb(112, 47, 138);"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                      />
                    </svg>
                  </div>
                </div>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                        >
                          <div
                            class="depedencyDetailsScrollContainer"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
